--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ numpy
 pandas
 pretrainedmodels
 six
-torchvision
+torch==1.3.1+cpu torchvision==0.4.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
 opencv-contrib-python
 dlib
