--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,5 @@ numpy
 pandas
 pretrainedmodels
 six
-torch==1.3.1+cpu torchvision==0.4.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
-opencv-contrib-python
+torch==1.3.1+cpu torchvision==0.4.2+cpu 
 dlib
