--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ six
 http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
 torchvision==0.2.1
 dlib
-opencv-contrib-python
+opencv-python
