--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
 torchvision==0.2.1
 dlib
 opencv-python
+opencv-contrib-python
+opencv-python --upgrade
+opencv-contrib-python --upgrade
+
+
